src/main/java/com/example/coursemanagement/services/exceptions/errors/ResourceNotFoundException.java
package com.example.coursemanagement.services.exceptions.errors;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
